# Faintly

./: DEPLOY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: EditorCanvas.tsx  StatusBar.tsx
src/hooks/: useDocument.ts
